leo_parser.output
   0  $accept : %entry% $end

   1  program : opt_terms stmts opt_terms Leof

   2  stmts :
   3        | stmt
   4        | stmts terms stmt

   5  stmt : Lident params_opt Leq expr
   6       | lvalue Lwrite expr
   7       | Lfor name_seq_list opt_terms stmts opt_terms Lend
   8       | Lreturn expr
   9       | expr

  10  params_opt :
  11             | Llparen params Lrparen

  12  params : Lident
  13         | params Lcomma Lident

  14  lvalue : Lident
  15         | Lident Llbracket expr Lrbracket
  16         | Lident Llbracket seq Lrbracket

  17  name_seq_list : name_seq
  18                | name_seq_list Lcomma name_seq

  19  name_seq : Lident Lin seq

  20  seq : Lident
  21      | expr Ldot2 expr

  22  expr : Lint
  23       | Lident
  24       | expr Lplus expr
  25       | expr Lminus expr
  26       | expr Lmul expr
  27       | expr Ldiv expr
  28       | expr Lmod expr
  29       | expr Lxor expr
  30       | expr Ldot2 expr
  31       | Llparen expr Lrparen
  32       | Lif condition then_ expr if_tail
  33       | Ldo opt_terms stmts opt_terms Lend
  34       | Llcurly opt_terms stmts opt_terms Lrcurly
  35       | Lident Llparen args Lrparen
  36       | Lident Llbracket expr Lrbracket
  37       | Lident Llbracket seq Lrbracket
  38       | Lpipe expr Lpipe
  39       | expr Lhead
  40       | expr Ltail
  41       | Lnew atype Llbracket expr Lrbracket
  42       | Lbackslash params Lfollow expr

  43  condition : expr Llt expr
  44            | expr Lgt expr
  45            | expr Leq expr
  46            | expr Lneq expr
  47            | condition Land condition
  48            | condition Lor condition

  49  args : expr
  50       | args Lcomma expr
  51       |

  52  then_ : Lthen
  53        | eol

  54  if_tail :
  55          | Lelse expr

  56  atype : Lbyte
  57        | Ltint

  58  term : Lsemi
  59       | eol

  60  eol : Leol
  61      | Lrem Leol

  62  terms : term
  63        | terms term

  64  opt_terms :
  65            | terms

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


1: shift/reduce conflict (shift 3, reduce 64) on Leol
1: shift/reduce conflict (shift 4, reduce 64) on Lsemi
1: shift/reduce conflict (shift 5, reduce 64) on Lrem
state 1
	%entry% : '\001' . program  (66)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Leof  reduce 64
	Lpipe  reduce 64
	Llparen  reduce 64
	Llcurly  reduce 64
	Lbackslash  reduce 64
	Ldo  reduce 64
	Lfor  reduce 64
	Lif  reduce 64
	Lreturn  reduce 64
	Lnew  reduce 64
	Lint  reduce 64
	Lident  reduce 64

	program  goto 6
	opt_terms  goto 7
	terms  goto 8
	eol  goto 9
	term  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	eol : Leol .  (60)

	.  reduce 60


state 4
	term : Lsemi .  (58)

	.  reduce 58


state 5
	eol : Lrem . Leol  (61)

	Leol  shift 11
	.  error


state 6
	%entry% : '\001' program .  (66)

	.  reduce 66


state 7
	program : opt_terms . stmts opt_terms Leof  (1)
	stmts : .  (2)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lfor  shift 17
	Lif  shift 18
	Lreturn  shift 19
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 22
	Leol  reduce 2
	Leof  reduce 2
	Lsemi  reduce 2
	Lrem  reduce 2

	stmts  goto 23
	stmt  goto 24
	expr  goto 25
	lvalue  goto 26


8: shift/reduce conflict (shift 3, reduce 65) on Leol
8: shift/reduce conflict (shift 4, reduce 65) on Lsemi
8: shift/reduce conflict (shift 5, reduce 65) on Lrem
state 8
	terms : terms . term  (63)
	opt_terms : terms .  (65)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Leof  reduce 65
	Lpipe  reduce 65
	Llparen  reduce 65
	Llcurly  reduce 65
	Lrcurly  reduce 65
	Lbackslash  reduce 65
	Ldo  reduce 65
	Lend  reduce 65
	Lfor  reduce 65
	Lif  reduce 65
	Lreturn  reduce 65
	Lnew  reduce 65
	Lint  reduce 65
	Lident  reduce 65

	eol  goto 9
	term  goto 27


state 9
	term : eol .  (59)

	.  reduce 59


state 10
	terms : term .  (62)

	.  reduce 62


state 11
	eol : Lrem Leol .  (61)

	.  reduce 61


state 12
	expr : Lpipe . expr Lpipe  (38)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 29


state 13
	expr : Llparen . expr Lrparen  (31)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 30


14: shift/reduce conflict (shift 3, reduce 64) on Leol
14: shift/reduce conflict (shift 4, reduce 64) on Lsemi
14: shift/reduce conflict (shift 5, reduce 64) on Lrem
state 14
	expr : Llcurly . opt_terms stmts opt_terms Lrcurly  (34)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Lpipe  reduce 64
	Llparen  reduce 64
	Llcurly  reduce 64
	Lrcurly  reduce 64
	Lbackslash  reduce 64
	Ldo  reduce 64
	Lfor  reduce 64
	Lif  reduce 64
	Lreturn  reduce 64
	Lnew  reduce 64
	Lint  reduce 64
	Lident  reduce 64

	opt_terms  goto 31
	terms  goto 8
	eol  goto 9
	term  goto 10


state 15
	expr : Lbackslash . params Lfollow expr  (42)

	Lident  shift 32
	.  error

	params  goto 33


16: shift/reduce conflict (shift 3, reduce 64) on Leol
16: shift/reduce conflict (shift 4, reduce 64) on Lsemi
16: shift/reduce conflict (shift 5, reduce 64) on Lrem
state 16
	expr : Ldo . opt_terms stmts opt_terms Lend  (33)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Lpipe  reduce 64
	Llparen  reduce 64
	Llcurly  reduce 64
	Lbackslash  reduce 64
	Ldo  reduce 64
	Lend  reduce 64
	Lfor  reduce 64
	Lif  reduce 64
	Lreturn  reduce 64
	Lnew  reduce 64
	Lint  reduce 64
	Lident  reduce 64

	opt_terms  goto 34
	terms  goto 8
	eol  goto 9
	term  goto 10


state 17
	stmt : Lfor . name_seq_list opt_terms stmts opt_terms Lend  (7)

	Lident  shift 35
	.  error

	name_seq_list  goto 36
	name_seq  goto 37


state 18
	expr : Lif . condition then_ expr if_tail  (32)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 38
	condition  goto 39


state 19
	stmt : Lreturn . expr  (8)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 40


state 20
	expr : Lnew . atype Llbracket expr Lrbracket  (41)

	Lbyte  shift 41
	Ltint  shift 42
	.  error

	atype  goto 43


state 21
	expr : Lint .  (22)

	.  reduce 22


state 22
	stmt : Lident . params_opt Leq expr  (5)
	lvalue : Lident .  (14)
	lvalue : Lident . Llbracket expr Lrbracket  (15)
	lvalue : Lident . Llbracket seq Lrbracket  (16)
	expr : Lident .  (23)
	expr : Lident . Llparen args Lrparen  (35)
	expr : Lident . Llbracket expr Lrbracket  (36)
	expr : Lident . Llbracket seq Lrbracket  (37)
	params_opt : .  (10)

	Llparen  shift 44
	Llbracket  shift 45
	Leol  reduce 23
	Leof  reduce 23
	Lsemi  reduce 23
	Lmod  reduce 23
	Lplus  reduce 23
	Lminus  reduce 23
	Lmul  reduce 23
	Ldiv  reduce 23
	Lxor  reduce 23
	Leq  reduce 10
	Ldot2  reduce 23
	Lrcurly  reduce 23
	Lrem  reduce 23
	Lwrite  reduce 14
	Lend  reduce 23
	Lhead  reduce 23
	Ltail  reduce 23

	params_opt  goto 46


state 23
	program : opt_terms stmts . opt_terms Leof  (1)
	stmts : stmts . terms stmt  (4)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Leof  reduce 64

	opt_terms  goto 47
	terms  goto 48
	eol  goto 9
	term  goto 10


state 24
	stmts : stmt .  (3)

	.  reduce 3


state 25
	stmt : expr .  (9)
	expr : expr . Lplus expr  (24)
	expr : expr . Lminus expr  (25)
	expr : expr . Lmul expr  (26)
	expr : expr . Ldiv expr  (27)
	expr : expr . Lmod expr  (28)
	expr : expr . Lxor expr  (29)
	expr : expr . Ldot2 expr  (30)
	expr : expr . Lhead  (39)
	expr : expr . Ltail  (40)

	Lmod  shift 49
	Lplus  shift 50
	Lminus  shift 51
	Lmul  shift 52
	Ldiv  shift 53
	Lxor  shift 54
	Ldot2  shift 55
	Lhead  shift 56
	Ltail  shift 57
	Leol  reduce 9
	Leof  reduce 9
	Lsemi  reduce 9
	Lrcurly  reduce 9
	Lrem  reduce 9
	Lend  reduce 9


state 26
	stmt : lvalue . Lwrite expr  (6)

	Lwrite  shift 58
	.  error


state 27
	terms : terms term .  (63)

	.  reduce 63


28: shift/reduce conflict (shift 59, reduce 23) on Llparen
state 28
	expr : Lident .  (23)
	expr : Lident . Llparen args Lrparen  (35)
	expr : Lident . Llbracket expr Lrbracket  (36)
	expr : Lident . Llbracket seq Lrbracket  (37)

	Llparen  shift 59
	Llbracket  shift 60
	Leol  reduce 23
	Leof  reduce 23
	Lpipe  reduce 23
	Lsemi  reduce 23
	Lmod  reduce 23
	Lplus  reduce 23
	Lminus  reduce 23
	Lmul  reduce 23
	Ldiv  reduce 23
	Lxor  reduce 23
	Llt  reduce 23
	Lgt  reduce 23
	Leq  reduce 23
	Lneq  reduce 23
	Lrparen  reduce 23
	Land  reduce 23
	Lor  reduce 23
	Ldot2  reduce 23
	Lcomma  reduce 23
	Llcurly  reduce 23
	Lrcurly  reduce 23
	Lrem  reduce 23
	Lbackslash  reduce 23
	Lrbracket  reduce 23
	Ldo  reduce 23
	Lend  reduce 23
	Lfor  reduce 23
	Lif  reduce 23
	Lthen  reduce 23
	Lelse  reduce 23
	Lreturn  reduce 23
	Lhead  reduce 23
	Ltail  reduce 23
	Lnew  reduce 23
	Lint  reduce 23
	Lident  reduce 23


state 29
	expr : expr . Lplus expr  (24)
	expr : expr . Lminus expr  (25)
	expr : expr . Lmul expr  (26)
	expr : expr . Ldiv expr  (27)
	expr : expr . Lmod expr  (28)
	expr : expr . Lxor expr  (29)
	expr : expr . Ldot2 expr  (30)
	expr : Lpipe expr . Lpipe  (38)
	expr : expr . Lhead  (39)
	expr : expr . Ltail  (40)

	Lpipe  shift 61
	Lmod  shift 49
	Lplus  shift 50
	Lminus  shift 51
	Lmul  shift 52
	Ldiv  shift 53
	Lxor  shift 54
	Ldot2  shift 55
	Lhead  shift 56
	Ltail  shift 57
	.  error


state 30
	expr : expr . Lplus expr  (24)
	expr : expr . Lminus expr  (25)
	expr : expr . Lmul expr  (26)
	expr : expr . Ldiv expr  (27)
	expr : expr . Lmod expr  (28)
	expr : expr . Lxor expr  (29)
	expr : expr . Ldot2 expr  (30)
	expr : Llparen expr . Lrparen  (31)
	expr : expr . Lhead  (39)
	expr : expr . Ltail  (40)

	Lmod  shift 49
	Lplus  shift 50
	Lminus  shift 51
	Lmul  shift 52
	Ldiv  shift 53
	Lxor  shift 54
	Lrparen  shift 62
	Ldot2  shift 55
	Lhead  shift 56
	Ltail  shift 57
	.  error


state 31
	expr : Llcurly opt_terms . stmts opt_terms Lrcurly  (34)
	stmts : .  (2)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lfor  shift 17
	Lif  shift 18
	Lreturn  shift 19
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 22
	Leol  reduce 2
	Lsemi  reduce 2
	Lrcurly  reduce 2
	Lrem  reduce 2

	stmts  goto 63
	stmt  goto 24
	expr  goto 25
	lvalue  goto 26


state 32
	params : Lident .  (12)

	.  reduce 12


state 33
	params : params . Lcomma Lident  (13)
	expr : Lbackslash params . Lfollow expr  (42)

	Lcomma  shift 64
	Lfollow  shift 65
	.  error


state 34
	expr : Ldo opt_terms . stmts opt_terms Lend  (33)
	stmts : .  (2)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lfor  shift 17
	Lif  shift 18
	Lreturn  shift 19
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 22
	Leol  reduce 2
	Lsemi  reduce 2
	Lrem  reduce 2
	Lend  reduce 2

	stmts  goto 66
	stmt  goto 24
	expr  goto 25
	lvalue  goto 26


state 35
	name_seq : Lident . Lin seq  (19)

	Lin  shift 67
	.  error


36: shift/reduce conflict (shift 3, reduce 64) on Leol
36: shift/reduce conflict (shift 4, reduce 64) on Lsemi
36: shift/reduce conflict (shift 5, reduce 64) on Lrem
state 36
	stmt : Lfor name_seq_list . opt_terms stmts opt_terms Lend  (7)
	name_seq_list : name_seq_list . Lcomma name_seq  (18)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lcomma  shift 68
	Lrem  shift 5
	Lpipe  reduce 64
	Llparen  reduce 64
	Llcurly  reduce 64
	Lbackslash  reduce 64
	Ldo  reduce 64
	Lend  reduce 64
	Lfor  reduce 64
	Lif  reduce 64
	Lreturn  reduce 64
	Lnew  reduce 64
	Lint  reduce 64
	Lident  reduce 64

	opt_terms  goto 69
	terms  goto 8
	eol  goto 9
	term  goto 10


state 37
	name_seq_list : name_seq .  (17)

	.  reduce 17


state 38
	expr : expr . Lplus expr  (24)
	expr : expr . Lminus expr  (25)
	expr : expr . Lmul expr  (26)
	expr : expr . Ldiv expr  (27)
	expr : expr . Lmod expr  (28)
	expr : expr . Lxor expr  (29)
	expr : expr . Ldot2 expr  (30)
	expr : expr . Lhead  (39)
	expr : expr . Ltail  (40)
	condition : expr . Llt expr  (43)
	condition : expr . Lgt expr  (44)
	condition : expr . Leq expr  (45)
	condition : expr . Lneq expr  (46)

	Lmod  shift 49
	Lplus  shift 50
	Lminus  shift 51
	Lmul  shift 52
	Ldiv  shift 53
	Lxor  shift 54
	Llt  shift 70
	Lgt  shift 71
	Leq  shift 72
	Lneq  shift 73
	Ldot2  shift 55
	Lhead  shift 56
	Ltail  shift 57
	.  error


state 39
	expr : Lif condition . then_ expr if_tail  (32)
	condition : condition . Land condition  (47)
	condition : condition . Lor condition  (48)

	Leol  shift 3
	Land  shift 74
	Lor  shift 75
	Lrem  shift 5
	Lthen  shift 76
	.  error

	then_  goto 77
	eol  goto 78


state 40
	stmt : Lreturn expr .  (8)
	expr : expr . Lplus expr  (24)
	expr : expr . Lminus expr  (25)
	expr : expr . Lmul expr  (26)
	expr : expr . Ldiv expr  (27)
	expr : expr . Lmod expr  (28)
	expr : expr . Lxor expr  (29)
	expr : expr . Ldot2 expr  (30)
	expr : expr . Lhead  (39)
	expr : expr . Ltail  (40)

	Lmod  shift 49
	Lplus  shift 50
	Lminus  shift 51
	Lmul  shift 52
	Ldiv  shift 53
	Lxor  shift 54
	Ldot2  shift 55
	Lhead  shift 56
	Ltail  shift 57
	Leol  reduce 8
	Leof  reduce 8
	Lsemi  reduce 8
	Lrcurly  reduce 8
	Lrem  reduce 8
	Lend  reduce 8


state 41
	atype : Lbyte .  (56)

	.  reduce 56


state 42
	atype : Ltint .  (57)

	.  reduce 57


state 43
	expr : Lnew atype . Llbracket expr Lrbracket  (41)

	Llbracket  shift 79
	.  error


state 44
	params_opt : Llparen . params Lrparen  (11)
	expr : Lident Llparen . args Lrparen  (35)
	args : .  (51)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 80
	Lrparen  reduce 51
	Lcomma  reduce 51

	expr  goto 81
	params  goto 82
	args  goto 83


state 45
	lvalue : Lident Llbracket . expr Lrbracket  (15)
	lvalue : Lident Llbracket . seq Lrbracket  (16)
	expr : Lident Llbracket . expr Lrbracket  (36)
	expr : Lident Llbracket . seq Lrbracket  (37)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 84
	.  error

	expr  goto 85
	seq  goto 86


state 46
	stmt : Lident params_opt . Leq expr  (5)

	Leq  shift 87
	.  error


state 47
	program : opt_terms stmts opt_terms . Leof  (1)

	Leof  shift 88
	.  error


state 48
	stmts : stmts terms . stmt  (4)
	terms : terms . term  (63)
	opt_terms : terms .  (65)

	Leol  shift 3
	Lpipe  shift 12
	Lsemi  shift 4
	Llparen  shift 13
	Llcurly  shift 14
	Lrem  shift 5
	Lbackslash  shift 15
	Ldo  shift 16
	Lfor  shift 17
	Lif  shift 18
	Lreturn  shift 19
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 22
	Leof  reduce 65
	Lrcurly  reduce 65
	Lend  reduce 65

	stmt  goto 89
	expr  goto 25
	lvalue  goto 26
	eol  goto 9
	term  goto 27


state 49
	expr : expr Lmod . expr  (28)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 90


state 50
	expr : expr Lplus . expr  (24)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 91


state 51
	expr : expr Lminus . expr  (25)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 92


state 52
	expr : expr Lmul . expr  (26)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 93


state 53
	expr : expr Ldiv . expr  (27)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 94


state 54
	expr : expr Lxor . expr  (29)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 95


state 55
	expr : expr Ldot2 . expr  (30)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 96


state 56
	expr : expr Lhead .  (39)

	.  reduce 39


state 57
	expr : expr Ltail .  (40)

	.  reduce 40


state 58
	stmt : lvalue Lwrite . expr  (6)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 97


state 59
	expr : Lident Llparen . args Lrparen  (35)
	args : .  (51)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	Lrparen  reduce 51
	Lcomma  reduce 51

	expr  goto 81
	args  goto 83


state 60
	expr : Lident Llbracket . expr Lrbracket  (36)
	expr : Lident Llbracket . seq Lrbracket  (37)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 84
	.  error

	expr  goto 98
	seq  goto 99


state 61
	expr : Lpipe expr Lpipe .  (38)

	.  reduce 38


state 62
	expr : Llparen expr Lrparen .  (31)

	.  reduce 31


state 63
	stmts : stmts . terms stmt  (4)
	expr : Llcurly opt_terms stmts . opt_terms Lrcurly  (34)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Lrcurly  reduce 64

	opt_terms  goto 100
	terms  goto 48
	eol  goto 9
	term  goto 10


state 64
	params : params Lcomma . Lident  (13)

	Lident  shift 101
	.  error


state 65
	expr : Lbackslash params Lfollow . expr  (42)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 102


state 66
	stmts : stmts . terms stmt  (4)
	expr : Ldo opt_terms stmts . opt_terms Lend  (33)
	opt_terms : .  (64)

	Leol  shift 3
	Lsemi  shift 4
	Lrem  shift 5
	Lend  reduce 64

	opt_terms  goto 103
	terms  goto 48
	eol  goto 9
	term  goto 10


state 67
	name_seq : Lident Lin . seq  (19)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 84
	.  error

	expr  goto 104
	seq  goto 105


state 68
	name_seq_list : name_seq_list Lcomma . name_seq  (18)

	Lident  shift 35
	.  error

	name_seq  goto 106


state 69
	stmt : Lfor name_seq_list opt_terms . stmts opt_terms Lend  (7)
	stmts : .  (2)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lfor  shift 17
	Lif  shift 18
	Lreturn  shift 19
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 22
	Leol  reduce 2
	Lsemi  reduce 2
	Lrem  reduce 2
	Lend  reduce 2

	stmts  goto 107
	stmt  goto 24
	expr  goto 25
	lvalue  goto 26


state 70
	condition : expr Llt . expr  (43)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 108


state 71
	condition : expr Lgt . expr  (44)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 109


state 72
	condition : expr Leq . expr  (45)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 110


state 73
	condition : expr Lneq . expr  (46)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 111


state 74
	condition : condition Land . condition  (47)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 38
	condition  goto 112


state 75
	condition : condition Lor . condition  (48)

	Lpipe  shift 12
	Llparen  shift 13
	Llcurly  shift 14
	Lbackslash  shift 15
	Ldo  shift 16
	Lif  shift 18
	Lnew  shift 20
	Lint  shift 21
	Lident  shift 28
	.  error

	expr  goto 38
	condition  goto 113


state 76
	then_ : Lthen .  (52)

	.  reduce 52


state 77
